Fixing bug 122119, cannot use consecutive white space characters in PARAM tags, r=harishd, sr=jst